discussion/kv_engine/159978/159978_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48120: Make magma metadata usable in non-kv projects

Currently magma MetaData includes Item and a couple of other
kv types that we won't want to include in non-kv projects(magma)
when we re-use the metadata.

In addition, move the metadata files to a new directory that,
for want of a better name, called "shared" so that in a future
patch we can compile the metadata in a separate library that magma
can link against.

Magma also wants the Metadata type to be convertible to and from
nlohmann json so add functions to do so.

Change-Id: I89a348f2a96a0e97de81f0915c74a5ad6da80cb9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-08-25 13:05:04.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-25 13:34:56.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38925/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0062/0157]: ep worker stats...(45 ms) SKIPPED


99% tests passed, 2 tests failed out of 403

Total Test time (real) = 665.09 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38925/ )

Timeout of a CTest test 402/403 Test #322: memcached_testapp.default.TransportProtocols/StatsTest ........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38925/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11585/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/shared/magma-kvstore_metadata.h:158:18: error: no member named "memcpy" in namespace "std" [clang-diagnostic-error]
            std::memcpy(this, buf, sizeof(Version));
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/shared/magma-kvstore_metadata.h:175:18: error: no member named "memcpy" in namespace "std" [clang-diagnostic-error]
            std::memcpy(this, buf, sizeof(MetaDataV0));
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/shared/magma-kvstore_metadata.h:204:18: error: no member named "memcpy" in namespace "std" [clang-diagnostic-error]
            std::memcpy(this, buf, sizeof(MetaDataV1));
                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11585/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/shared/magma-kvstore_metadata.h:158:18:
error: no member named "memcpy" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11585/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33179/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/shared/magma-kvstore_metadata.h:158:18:
error: no member named "memcpy" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33179/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10363/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/src/kvstore/magma-kvstore/shared/magma-kvstore_metadata.h b/engines/ep/src/kvstore/magma-kvstore/shared/magma-kvstore_metadata.h
index 19217fa85..81bd93339 100644
--- a/engines/ep/src/kvstore/magma-kvstore/shared/magma-kvstore_metadata.h
+++ b/engines/ep/src/kvstore/magma-kvstore/shared/magma-kvstore_metadata.h
@@ -174,7 +174,7 @@ protected:
         MetaDataV0(const char* buf) {
             std::memcpy(this, buf, sizeof(MetaDataV0));
         }
-     
+
         cb::uint48_t bySeqno = 0;
         uint64_t cas = 0;
         cb::uint48_t revSeqno = 0;

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10363/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12323/ : FAILURE

Failure of GoogleTest "TransportProtocols/InterfacesTest.MB_47707_LocalhostNotWhitelisted/Mcbp":

<pre>
[ RUN      ] TransportProtocols/InterfacesTest.MB_47707_LocalhostNotWhitelisted/Mcbp
[2021-08-25T13:19:53.746Z] unknown file: Failure
[2021-08-25T13:19:53.746Z] C++ exception with description "AsyncSocketException: recv() failed (peer=<uninitialized address>, local=127.0.0.1:55304), type = Internal error, errno = 54 (Connection reset by peer)" thrown in the test body.
[2021-08-25T13:19:53.746Z] [  FAILED  ] TransportProtocols/InterfacesTest.MB_47707_LocalhostNotWhitelisted/Mcbp, where GetParam() = Mcbp (425 ms)
TransportProtocols/InterfacesTest.MB_47707_LocalhostNotWhitelisted/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12323/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13410/ : FAILURE

Failure of GoogleTest "TransportProtocols/SaslTest.SingleSCRAM_SHA1/Mcbp":

<pre>
[ RUN      ] TransportProtocols/SaslTest.SingleSCRAM_SHA1/Mcbp
[2021-08-25T13:22:10.466Z] WARNING: Logging before InitGoogleLogging() is written to STDERR
[2021-08-25T13:22:10.466Z] W0825 13:21:51.314291  7727 HazptrDomain.h:670] Using the default inline executor for asynchronous reclamation may be susceptible to deadlock if the current thread happens to hold a resource needed by the deleter of a reclaimable object
[2021-08-25T13:22:10.466Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/tests/testapp/testapp_sasl.cc:58: Failure
[2021-08-25T13:22:10.466Z] Expected: connection.deleteBucket(bucket3) doesn"t throw an exception.
[2021-08-25T13:22:10.466Z]   Actual: it throws.
[2021-08-25T13:22:10.466Z] [  FAILED  ] TransportProtocols/SaslTest.SingleSCRAM_SHA1/Mcbp, where GetParam() = Mcbp (20037 ms)
TransportProtocols/SaslTest.SingleSCRAM_SHA1/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13410/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1237/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1226/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13193/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13792/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21331/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
